--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
 		}
 	],
 	"require": {
-		"php": ">=7.4.0 <8.3.0"
+		"php": "7.4 - 8.3"
 	},
 	"require-dev": {
 		"brianium/paratest": "^6.3.0",
